Updated from RagnaHosting

--- a/Hercules/conf/ragnashield.conf
+++ b/Hercules/conf/ragnashield.conf
@@ -34,7 +34,7 @@ ragnaban.allow_rogue_clients: no
 ragnaban.sql.db_hostname: 127.0.0.1
 ragnaban.sql.db_port: 3306
 ragnaban.sql.db_username: root
-ragnaban.sql.db_password: ${PASS}
+ragnaban.sql.db_password: nnakwilqoye!9
 ragnaban.sql.db_database: main
 //ragnaban.sql.codepage:
 ragnaban.sql.ragnaban_table: ragnashield_banlist
