--- a/Hercules/conf/battle/misc.conf
+++ b/Hercules/conf/battle/misc.conf
@@ -55,12 +55,12 @@ night_at_start: no
 // Define duration in msec of the day (default: 7200000 = 2 hours)
 // Set to 0 to disable day cycle (but not @day GM command).
 // Except 0, minimum is 60000 (1 minute)
-day_duration: 0
+day_duration: 7200000
 
 // Define duration in msec of the night (default: 1800000 = 30 min)
 // Set to 0 to disable night cycle (but not @night GM command).
 // Except 0, minimum is 60000 (1 minute)
-night_duration: 0
+night_duration: 7200000
 
 // Using duel on pvp-maps
 duel_allow_pvp: no
@@ -78,7 +78,7 @@ duel_autoleave_when_die: yes
 duel_time_interval: 60
 
 // Restrict duel usage to same map
-duel_only_on_same_map: no
+duel_only_on_same_map: yes
 
 // Determines max number of characters that can stack within a single cell. 
 // Official - Only affects the walking routines of characters, including monsters.
@@ -103,7 +103,7 @@ at_mapflag: no
 at_timeout: 0
 
 // Auction system, fee per hour. Default is 12000
-auction_feeperhour: 12000
+auction_feeperhour: 1200
 
 // Auction maximum sell price
 auction_maximumprice: 500000000
@@ -117,14 +117,14 @@ searchstore_maxresults: 30
 
 // Whether or not gaining and loosing of cash points is displayed (Note 1).
 // Default: no
-cashshop_show_points: no
+cashshop_show_points: yes
 
 // Whether or not mail box status is displayed upon login.
 // Default: 0
 // 0 = No
 // 1 = Yes
 // 2 = Yes, when there are unread mails
-mail_show_status: 0
+mail_show_status: 2
 
 // Is monster transformation disabled during Guild Wars?
 // If set to yes, monster transforming is automatically removed/disabled when entering castles during WoE times
