--- a/Hercules/conf/battle/player.conf
+++ b/Hercules/conf/battle/player.conf
@@ -35,7 +35,7 @@ player_skillup_limit: yes
 
 // Quest skills can be learned? (Note 1)
 // Setting this to yes can open an exploit on your server!
-quest_skill_learn: no
+quest_skill_learn: yes
 
 // When skills are reset, quest skills are reset as well? (Note 1)
 // Setting this to yes can open an exploit on your server!
@@ -64,7 +64,7 @@ natural_heal_skill_interval: 10000
 natural_heal_weight_rate: 50
 
 // Maximum atk speed. (Default 190, Highest allowed 199)
-max_aspd: 190
+max_aspd: 199
 
 // Same as max_aspd, but for 3rd classes. (Default 193, Highest allowed 199)
 max_third_aspd: 193
