--- a/Hercules/conf/battle/client.conf
+++ b/Hercules/conf/battle/client.conf
@@ -61,7 +61,7 @@ max_lv: 99
 // Example: If max_lv is 99 and aura_lv is 150, characters with level 99~149
 //          will be sent as being all level 98, and only characters with level
 //          150 or more will be reported as having level 99 and show an aura.
-aura_lv: 99
+aura_lv: 100
 
 // Units types affected by max_lv and aura_lv settings. (Note 3)
 // Note: If an unit type, which normally does not show an aura, is
@@ -98,7 +98,7 @@ display_version: no
 
 // When affected with the "Hallucination" status effect, send the effect to client? (Note 1)
 // Note: Set to 'no' if the client lags due to the "Wavy" screen effect.
-display_hallucination: yes
+display_hallucination: no
 
 // Set this to 1 if your client supports status change timers and you want to use them
 // Clients from 2009 onward support this
