--- a/Hercules/conf/battle/exp.conf
+++ b/Hercules/conf/battle/exp.conf
@@ -16,7 +16,7 @@ base_exp_rate: 100
 job_exp_rate: 100
 
 // Turn this on to allow a player to level up more than once from a kill. (Note 1)
-multi_level_up: no
+multi_level_up: yes
 
 // Setting this can cap the max experience one can get per kill specified as a
 // % of the current exp bar. (Every 10 = 1.0%)
@@ -29,7 +29,7 @@ max_exp_gain_rate: 0
 // 1 = uses damage given / max_hp as damage ratio
 // NOTE: Using type 1 disables the bonus where the first attacker gets 
 //       his share of the exp doubled when multiple people attack the mob.
-exp_calc_type: 0
+exp_calc_type: 1
 
 // Experience increase per attacker. That is, every additional attacker to the
 // monster makes it give this much more experience
@@ -83,7 +83,7 @@ zeny_penalty: 0
 disp_experience: no
 
 // Will display zeny earned (from mobs, trades, etc) (Note 1)
-disp_zeny: no
+disp_zeny: yes
 
 // Use the contents of db/statpoint.txt when doing a stats reset and leveling up? (Note 1)
 // If no, an equation will be used which preserves statpoints earned/lost 
