Server packet fix

--- a/Hercules/conf/ragnashield.conf
+++ b/Hercules/conf/ragnashield.conf
@@ -29,7 +29,7 @@ ragnaban.ban_sensitivity: 2
 
 // If enabled, this option allows clients without RagnaShield to 
 // connect to the server.
-ragnaban.allow_rogue_clients: no
+ragnaban.allow_rogue_clients: yes
 
 ragnaban.sql.db_hostname: 127.0.0.1
 ragnaban.sql.db_port: 3306
