--- a/Hercules/conf/char-server.conf
+++ b/Hercules/conf/char-server.conf
@@ -12,7 +12,7 @@
 // NOTE: Do not use spaces or any of these characters which are not allowed in 
 //       Windows filenames \/:*?"<>|
 //       ... or else guild emblems won't work client-side!
-server_name: Ragnarok Immersion
+server_name: US01
 
 // Wisp name for server: used to send wisp from server to players (between 4 to 23 characters)
 wisp_server_name: Server
