--- a/Hercules/conf/groups.conf
+++ b/Hercules/conf/groups.conf
@@ -101,6 +101,11 @@ groups: (
 		showexp: true
 		showzeny: true
 		auction: true
+		mobinfo: true
+		iteminfo: true
+		whodrops: true
+		hominfo: true
+		homstats: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
