--- a/Hercules/conf/groups.conf
+++ b/Hercules/conf/groups.conf
@@ -106,6 +106,8 @@ groups: (
 		whodrops: true
 		hominfo: true
 		homstats: true
+		rates: true
+		whereis: true
 	}
 	permissions: {
 		/* without this basic permissions regular players could not 
