--- a/Hercules/db/pre-re/item_db.conf
+++ b/Hercules/db/pre-re/item_db.conf
@@ -4070,6 +4070,7 @@ item_db: (
 	Name: "Trap"
 	Type: 3
 	Buy: 100
+	Sell: 0
 	Weight: 10
 	BuyingStore: true
 },
@@ -36702,6 +36703,7 @@ item_db: (
 	Buy: 0
 	Weight: 300
 	Def: 2
+	Slots: 1
 	Loc: 256
 	Refine: false
 	View: 349
@@ -84851,7 +84853,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -84880,7 +84881,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -84909,7 +84909,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -84938,7 +84937,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -84967,7 +84965,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -84996,7 +84993,6 @@ item_db: (
 	Name: "Ferocious Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 5
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85025,7 +85021,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85054,7 +85049,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85083,7 +85077,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85112,7 +85105,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85141,7 +85133,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85170,7 +85161,6 @@ item_db: (
 	Name: "Protector Armor"
 	Type: 5
 	Buy: 0
-	Weight: 2800
 	Def: 6
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85199,7 +85189,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85228,7 +85217,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85257,7 +85245,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85286,7 +85273,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85315,7 +85301,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85344,7 +85329,6 @@ item_db: (
 	Name: "Ferocious Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85373,7 +85357,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85402,7 +85385,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85431,7 +85413,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85460,7 +85441,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85489,7 +85469,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85518,7 +85497,6 @@ item_db: (
 	Name: "Protector Manteau"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 3
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85547,7 +85525,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85578,7 +85555,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85609,7 +85585,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85640,7 +85615,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85671,7 +85645,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85702,7 +85675,6 @@ item_db: (
 	Name: "Ferocious Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85733,7 +85705,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85762,7 +85733,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85791,7 +85761,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85820,7 +85789,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85849,7 +85817,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
@@ -85878,7 +85845,6 @@ item_db: (
 	Name: "Protector Shoes"
 	Type: 5
 	Buy: 0
-	Weight: 500
 	Def: 4
 	Slots: 1
 	Job: 0xFFFFFFFE
