--- a/Hercules/npc/scripts.conf
+++ b/Hercules/npc/scripts.conf
@@ -3,6 +3,10 @@
 // --------------------------------------------------------------
 npc: npc/custom/card_remover.txt
 npc: npc/custom/MVP_PVP_Points.txt
+npc: npc/custom/reinvented/reputation/geffen.txt
+npc: npc/custom/reinvented/reputation/prontera.txt
+npc: npc/custom/reinvented/reputation/payon.txt
+npc: npc/custom/reinvented/reputation/morocc.txt
 // --------------------------------------------------------------
 // -                     Message of the Day                     -
 // --------------------------------------------------------------
