Reputation System Update

--- a/Hercules/db/pre-re/item_db.conf
+++ b/Hercules/db/pre-re/item_db.conf
@@ -43843,8 +43843,9 @@ item_db: (
 	Id: 6124
 	AegisName: "Wolf's_Flute"
 	Name: "Wolf Flute"
-	Type: 3
+	Type: 2
 	Buy: 10
+	Delay: 900000
 	Trade: {
 		nodrop: true
 		notrade: true
@@ -43855,6 +43856,7 @@ item_db: (
 		nomail: true
 		noauction: true
 	}
+	Script: <" atcommand "@summon 3013 900000"; ">
 },
 {
 	Id: 6125
@@ -49442,8 +49444,9 @@ item_db: (
 	Id: 7309
 	AegisName: "Wing_Of_Crow"
 	Name: "Crow Wing"
-	Type: 3
+	Type: 2
 	Buy: 0
+	Delay: 900000
 	Trade: {
 		nodrop: true
 		notrade: true
@@ -49454,6 +49457,7 @@ item_db: (
 		nomail: true
 		noauction: true
 	}
+	Script: <" callfunc "F_GEFFEN_CROW_WING",1; ">
 },
 {
 	Id: 7310
@@ -51933,8 +51937,9 @@ item_db: (
 	Id: 7538
 	AegisName: "Sifted_Sand"
 	Name: "Sand for Work"
-	Type: 3
+	Type: 2
 	Buy: 0
+	Delay: 900000
 	Trade: {
 		nodrop: true
 		notrade: true
@@ -51944,6 +51949,10 @@ item_db: (
 		nomail: true
 		noauction: true
 	}
+	Script: <"
+		sc_start SC_INCFLEE2,6000,1000;
+		sc_start SC_INCFLEE,6000,1000;
+	">
 },
 {
 	Id: 7539
@@ -60595,6 +60604,8 @@ item_db: (
 	Type: 2
 	Buy: 2
 	Weight: 10
+	Delay: 900000
+	KeepAfterUse: true
 	Trade: {
 		nodrop: true
 		notrade: true
